2009-12-17: Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fix revdep-rebuild to properly honor
	PORTAGE_NICENESS as an incremental to the current nice level (Bug
	297174).

2009-12-08: Paul Varner <fuzzyray@gentoo.org>
	* gentoolkit: Merge rev 113 from djanderson's genscripts repo

2009-10-30: Christian Ruppert <idl0r@gentoo.org>
	* revdep-rebuild: Speedup portageq queries. Include FuzzyRay's patch to
		respect EMERGE_DEFAULT_OPTS.

2009-10-27: Christian Ruppert <idl0r@gentoo.org>
	* revdep-rebuild: Use realpath in get_file_owner to be able to get the
		package containing e.g. /lib/libreadline.so.6 on amd64, fixes bug 280341.

2009-10-27: Christian Ruppert <idl0r@gentoo.org>
	* revdep-rebuild.1: Fix bug 281050, thanks to Jesús Guerrero
		<i92guboj@gentoo.org>.

2009-10-26: Christian Ruppert <idl0r@gentoo.org>
	* euse: Don't add an additional new line at the end of file.
	* equery.1: Fix bug 248844, thanks to J M W <ultip@ymail.com>.

2009-08-18: Robert Buchholz <rbu@gentoo.org>
	* glsa-check: Remove 'new' target from glsa-list, everyone
        should use 'affected' or 'all'
	* glsa-check: fix getminupgrade API doc and TypeError (Bug 281101)
	* glsa-check: Make --pretend output in glsa-check nicer.
        Add colors and fix linebreaks.

2009-06-22: Paul Varner <fuzzyray@gentoo.org>
	* glsa-check: Fix traceback with glsa-check -f (Bug 275105)

2009-06-05: Paul Varner <fuzzyray@gentoo.org>
	* epkginfo: Add patch from Sebastian Mingramm to Make epkginfo slot
	aware and only print keywords for the highest visible versions in each
	slot. (Bug 232635)

2009-05-20: Paul Varner <fuzzyray@gentoo.org>
	* All: Convert from using /etc/gentoolkit-version to
	/usr/share/gentoolkit/VERSION

2009-05-20: Paul Varner <fuzzyray@gentoo.org>
	* glsa-check: Add patches from Robert Buchholz to do the following:
	Handle unicode encoding better, python tweaks to speedup execution,
	change behavior of getMinUpgrade, restructure system affection